Project2/force-app/main/default/objects/Questions__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>A</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>