Project2/force-app/main/default/objects/Questions__c/fields/NumCorrect__c.field-meta.xml
<CustomField>
    <fullName>NumCorrect__c</fullName>
    <label>NumCorrect</label>
    <summaryFilterItems>
        <field>QuestionsAccount__c.Correct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuestionsAccount__c.Questions__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>