Project2/force-app/main/default/objects/Questions__c/fields/NumWrong__c.field-meta.xml
<CustomField>
    <fullName>NumWrong__c</fullName>
    <label>NumWrong</label>
    <summaryFilterItems>
        <field>QuestionsAccount__c.Correct__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuestionsAccount__c.Questions__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>