Project2/force-app/main/default/objects/Questions__c/fields/PercentCorrect__c.field-meta.xml
<CustomField>
    <fullName>PercentCorrect__c</fullName>
    <formula>NumCorrect__c /(NumCorrect__c + NumWrong__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PercentCorrect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>