Project2/force-app/main/default/objects/Questions__c/fields/Right_Answer__c.field-meta.xml
<CustomField>
    <fullName>Right_Answer__c</fullName>
    <label>Right Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>